✨ Add toolbar with icons

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tauri-apps/api": "^1.0.1",
     "classnames": "^2.3.1",
+    "solid-heroicons": "^2.0.3",
     "solid-js": "^1.4.2"
   }
 }
