--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,8 +17,9 @@ tauri-build = { version = "1.0.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 cocoa = "0.24.0"
+sqlite = {version = "0.26.0" }
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0", features = ["api-all"] }
+tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
 
 [features]
 # by default Tauri runs in production mode
