--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,8 @@ serde_json = "1.0"
 cocoa = "0.24.0"
 sqlite = {version = "0.26.0" }
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0", features = ["api-all", "system-tray"] }
+tauri = { version = "1.0.0", features = ["api-all", "macos-private-api", "system-tray"] }
+window-vibrancy = "0.1.3"
 
 [features]
 # by default Tauri runs in production mode
