--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.1",
     "solid-heroicons": "^2.0.3",
     "solid-js": "^1.4.2",
+    "uuid": "^8.3.2",
     "zod": "^3.17.3"
   }
 }
