--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,9 @@ sqlite = {version = "0.26.0" }
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0", features = ["api-all", "macos-private-api", "system-tray"] }
 window-vibrancy = "0.1.3"
+mysql = "22.1.0"
+ts-rs = "6.1"
+
 
 [features]
 # by default Tauri runs in production mode
